# Smart_temperature_control

./: Automatic_temperature_controller.cpp  CMakeLists.txt  README.md  config.h.in  main.cpp  temperature_controller_module.cpp  temperature_controller_module.h
googletest/googletest/: CMakeCache.txt
src/: CMakeLists.txt  Heater.h  temperature_controller_module.cpp  temperature_controller_module.h
test/: Automatic_temperature_controller_test.cpp
